--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:200,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Poppins:200,400" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css">
   <title>Video background</title>
 </head>
@@ -13,14 +13,14 @@
   <header class="video-header container">
 
     <div class="fullscreen-video-wrap">
-      <video src="drone-beach.mp4" autoplay="true" loop="true"></video>
+      <video src="bg-video.mp4" autoplay="true" loop="true"></video>
     </div>
 
     <div class="header-overlay"></div>
 
     <div class="header-content">
-      <h1>Wish I was Here</h1>
-      <a href="#" class="btn">Take Me There</a>
+      <h1>Wish you were here?</h1>
+      <a href="#" class="btn">Teleport</a>
     </div>
 
   </header>
